# MemoryMuppets

./: .gitignore  LICENSE.md  README.md  pyproject.toml  resources.qrc
memorymuppets/: __main__.py  _utils.py  resources.py  resources.qrc  ui.py
tests/: test_memorymuppets.py
