[tool.poetry]
name = "MemoryMuppets"
version = "0.1.0"
description = ""
authors = ["harper25 <olesjakubb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyside2 = "^5.12"
pillow = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
